--- a/browser-extensions/chrome/src/index.css
+++ b/browser-extensions/chrome/src/index.css
@@ -8,7 +8,6 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    align-items: center;
     font-size: 16px;
 }
 
@@ -40,8 +39,9 @@ h3 {
     margin: 0;
 }
 
-.center-text {
+.center-items {
     text-align: center;
+    align-items: center;
 }
 
 code {
